# dice-prover

./: .gitignore  README.md
backend/: package-lock.json  package.json  server.js
lib/: Cargo.toml
lib/src/: lib.rs
program/: Cargo.toml
program/src/: main.rs
script/: Cargo.toml
