[package]
name = "dice_proof_script"
version = "1.0.0"
edition = "2021"

[[bin]]
name = "prove"
path = "src/bin/prove.rs"

[[bin]]
name = "vkey"
path = "src/bin/vkey.rs"

[dependencies]
sp1-sdk = "4.0.0"
alloy-sol-types = "0.7.7"
dice_proof_lib = { path = "../lib" }
clap = { version = "4.3.0", features = ["derive"] }
dotenv = "0.15.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
hex = "0.4.3"
sha2 = "0.10.7"

[build-dependencies]
sp1-build = "4.0.0"
